--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
 
     </Section>
-    <script type="module" src="/scrips/codigo.js"></script>
+    <script  src="./scrips/codigo.js"></script>
 </body>
 
 </html>
