--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div>
             <h1 id="nombre"></h1>
             <h2 id="apellido"></h2>
-            <p id="certificado"></p>
+            <p id="titulo"></p>
         </div>
         <div class="anclas">
             <a href="#acerca">Acerca de Mi</a><br>
